--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CRM_System.jar
+dist.jar=${dist.dir}/Retail_Store_Management.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CRM_System
+dist.jlink.output=${dist.jlink.dir}/Retail_Store_Management
 excludes=
 file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\Jahid\\OneDrive\\Documents\\java project\\jar files\\mysql-connector-java-8.0.20.jar
 includes=**
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CRM_System
+jlink.launcher.name=Retail_Store_Management
 main.class=crm.system.CRMSystem
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
