completed the whole project

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,12 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Retail_Store_Management
 excludes=
+file.reference.itext.jar=dist\\lib\\itext.jar
 file.reference.mysql-connector-java-8.0.20.jar=C:\\Users\\Jahid\\OneDrive\\Documents\\java project\\jar files\\mysql-connector-java-8.0.20.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.20.jar}
+    ${file.reference.mysql-connector-java-8.0.20.jar}:\
+    ${file.reference.itext.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
